[package]
name = "minigrep"
version = "0.1.0"
description = "A minimal working version of the classic CLI-based GREP application"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
